# embedded_serial

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
